updates and commenting out code that doesnt work
currently the program cant get passed setting up the static list of tile options

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,10 @@
 		"**/.DS_Store": true,
 		"**/*.o": true,
 		"**/*.exe": true,
+		"**/*.md": true,
+	},
+	"files.associations": {
+		"__tuple": "cpp",
+		"array": "cpp"
 	}
 }
