refactor for lattice cell access

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,8 +10,10 @@
 		"**/*.md": true,
 	},
 	"files.associations": {
+		"*.ejs": "html",
 		"__tuple": "cpp",
 		"array": "cpp",
-		"new": "cpp"
+		"new": "cpp",
+		"*.m": "cpp"
 	}
 }
