--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,9 @@
 		"__tuple": "cpp",
 		"array": "cpp",
 		"new": "cpp",
-		"*.m": "cpp"
+		"*.m": "cpp",
+		"ostream": "cpp",
+		"cstdlib": "cpp",
+		"istream": "cpp"
 	}
 }
